[package]
name = "ereea"
version = "0.1.0"
edition = "2021"

# Configuration pour générer deux binaires distincts
[[bin]]
name = "simulation"  # Le serveur de simulation
path = "src/bin/simulation.rs"

[[bin]]
name = "earth"       # Le client d'affichage (Terre)
path = "src/bin/earth.rs"

[dependencies]
noise = "0.8"
rand = "0.8"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }